--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 }
 
 h1 {
+  font-size: 21px;
   font-weight: normal;
   margin: 0;
   padding: 15px 20px 35px;
@@ -22,4 +23,8 @@ h1 {
 
 button {
   cursor: pointer;
+}
+
+.highcharts-credits {
+  display: none !important;
 }
