hide context button

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ button {
   cursor: pointer;
 }
 
-.highcharts-credits {
+.highcharts-credits,
+.highcharts-contextbutton {
   display: none !important;
 }
