--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,27 @@ button {
 input::selection {
   background: #46b8e7;
 }
+
+.ui.toggle.checkbox input:focus:checked~.box:before,
+.ui.toggle.checkbox input:focus:checked~label:before,
+.ui.toggle.checkbox input:checked~.box:before,
+.ui.toggle.checkbox input:checked~label:before {
+  background-color: #1377af !important
+}
+.ui.toggle.checkbox .box:before, .ui.toggle.checkbox label:before {
+  background-color: #222;
+}
+
+
+
+.cf:before,
+.cf:after {
+  content: " ";
+  display: table;
+}
+.cf:after {
+  clear: both;
+}
+.cf {
+  *zoom: 1;
+}
