--- a/src/components/Prices.css
+++ b/src/components/Prices.css
@@ -14,6 +14,10 @@
 	padding: .78571429em;
 }
 
+.ReactVirtualized__Table__rowColumn.allow-overflow {
+	overflow: visible !important;
+}
+
 .ReactVirtualized__Table__rowColumn:first-child, .ReactVirtualized__Table__headerColumn:first-child {
 	padding-left: 0;
 }
