--- a/src/index.css
+++ b/src/index.css
@@ -58,4 +58,9 @@ input::selection {
   margin-top: 0 !important;
 }
 
+.monospace,
+.ui.monospace > input {
+  font-family: monospace;
+}
+
 html { -webkit-tap-highlight-color: rgba(0,0,0,0); }
