--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ button {
   cursor: pointer;
 }
 
+hr {
+  border: none;
+  border-top: 1px solid #49525a;
+}
+
 .highcharts-credits,
 .highcharts-contextbutton {
   display: none !important;
